--- a/train.ipynb
+++ b/train.ipynb
@@ -6,13 +6,14 @@
       "name": "train.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMajUzOdKbZk2Lms+y44phf",
+      "authorship_tag": "ABX9TyM46o0vRudTwOIYnbPs3J3o",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -32,23 +33,96 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 102
         },
-        "outputId": "d9af0885-5f6e-4edf-87d1-0bc4f8be65e5"
+        "outputId": "1d709eae-17ab-4562-fb75-eaa79913b4c9"
       },
       "source": [
-        "print('test')"
+        "#####Loading Libs\n",
+        "\n",
+        "!pip3 install torch torchvision\n",
+        "\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: torch in /usr/local/lib/python3.6/dist-packages (1.6.0+cu101)\n",
+            "Requirement already satisfied: torchvision in /usr/local/lib/python3.6/dist-packages (0.7.0+cu101)\n",
+            "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from torch) (0.16.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torch) (1.18.5)\n",
+            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision) (7.0.0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EqqC-i67jU8Y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "00bff52c-4335-4a93-f0a8-b6ac8c8da502"
+      },
+      "source": [
+        "import torch\n",
+        "a = torch.Tensor([1]).cuda()\n",
+        "print(a)"
       ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "test\n"
+            "tensor([1.], device='cuda:0')\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "55BlWgJpiu3E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#####Loading Train data"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l8NTzOpvixih",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#####Starting Training "
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HJ-5kjb1izMx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 4,
+      "outputs": []
     }
   ]
 }
