--- a/train.ipynb
+++ b/train.ipynb
@@ -6,7 +6,7 @@
       "name": "train.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM46o0vRudTwOIYnbPs3J3o",
+      "authorship_tag": "ABX9TyM76EgiK4/ilru1etpQ8Zxu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "!pip3 install torch torchvision\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,9 +72,11 @@
       "source": [
         "import torch\n",
         "a = torch.Tensor([1]).cuda()\n",
-        "print(a)"
+        "print(a)\n",
+        "\n",
+        "torch.cuda.is_available()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,12 +92,84 @@
       "metadata": {
         "id": "55BlWgJpiu3E",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ce30271e-ddf9-4760-caae-942d682985ff"
+      },
+      "source": [
+        "\"\"\"Headers\"\"\"\n",
+        "\n",
+        "from __future__ import print_function\n",
+        "from PIL import Image\n",
+        "import os\n",
+        "import os.path\n",
+        "import numpy as np\n",
+        "import sys\n",
+        "if sys.version_info[0] == 2:\n",
+        "    import cPickle as pickle\n",
+        "else:\n",
+        "    import pickle\n",
+        "\n",
+        "import torch.utils.data as data\n",
+        "from torchvision.datasets.utils import download_url, check_integrity\n",
+        "\n",
+        "import csv\n",
+        "%matplotlib inline\n",
+        "import matplotlib\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import os.path\n",
+        "import sys\n",
+        "import torch\n",
+        "import torch.utils.data\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "from torch.autograd import Variable\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "np.random.seed(111)\n",
+        "torch.cuda.manual_seed_all(111)\n",
+        "torch.manual_seed(111)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x7f46574b7138>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i9R1YTEkkgoy",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#####Loading Train data"
+        "# ---------\n",
+        "EPOCHS = 30\n",
+        "# ---------\n",
+        "\n",
+        "IS_GPU = True\n",
+        "TEST_BS = 256\n",
+        "TOTAL_CLASSES = 100\n",
+        "TRAIN_BS = 32\n",
+        "PATH_TO_CIFAR100_SFU_CV = \"/data/\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +182,47 @@
       "source": [
         "#####Starting Training "
       ],
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "huMmTgpKkfFV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_transform = transforms.Compose([\n",
+        "    transforms.RandomCrop(32, padding=4),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406],std=[0.229, 0.224, 0.225])\n",
+        "])\n",
+        "\n",
+        "\n",
+        "test_transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406],std=[0.229, 0.224, 0.225])\n",
+        "])\n",
+        "# ---------------------\n",
+        "\n",
+        "trainset =                                   \n",
+        "trainloader = \n",
+        "print(\"Train set size: \"+str(len(trainset)))\n",
+        "\n",
+        "valset = \n",
+        "valloader =\n",
+        "print(\"Val set size: \"+str(len(valset)))\n",
+        "\n",
+        "testset =\n",
+        "testloader =\n",
+        "print(\"Test set size: \"+str(len(testset)))\n",
+        "\n",
+        "# The classes\n",
+        "classes = ['glass','paper','cardboard','plastic','metal','trash']"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,9 +233,199 @@
         "colab": {}
       },
       "source": [
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class BaseNet(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(BaseNet, self).__init__()\n",
+        "\n",
+        "        self.conv1 = nn.Conv2d(3, 16, 5)\n",
+        "        self.pool = nn.MaxPool2d(2, 2)\n",
+        "        self.bn1 = nn.BatchNorm2d(num_features=16)\n",
+        "        self.conv2 = nn.Conv2d(16 , 128, 3)\n",
+        "        self.bn2 = nn.BatchNorm2d(num_features=128)\n",
+        "        self.conv3 = nn.Conv2d(128 , 256, 3)\n",
+        "        self.bn3 = nn.BatchNorm2d(num_features=256)\n",
+        "\n",
+        "        \n",
+        "        self.fc_net = nn.Sequential(\n",
+        "            nn.Linear(256 * 5 * 5, 3200),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.BatchNorm1d(3200),\n",
+        "            nn.Linear(3200, 1800),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.BatchNorm1d(1800),\n",
+        "            nn.Linear(1800, 900),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.BatchNorm1d(900),\n",
+        "            nn.Linear(900, 500),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.BatchNorm1d(500),\n",
+        "            nn.Linear(500, 100),\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "\n",
+        "        x = self.bn1(self.pool(F.relu(self.conv1(x))))\n",
+        "        # Output size = 28//2 x 28//2 = 14 x 14\n",
+        "\n",
+        "        x = self.bn2(F.relu(self.conv2(x)))\n",
+        "        # Output size = 12 x 12 = 12 x 12\n",
+        "\n",
+        "        x = self.bn3(self.pool(F.relu(self.conv3(x))))\n",
+        "        # Output size = 10//2 x 10//2 = 5 x 5\n",
+        "\n",
+        "        # This will help you design your own deeper network\n",
+        "        x = x.view(-1, 256 * 5 * 5)\n",
+        "        x = self.fc_net(x)\n",
+        "\n",
+        "        # No softmax is needed as the loss function in step 3\n",
+        "        # takes care of that\n",
+        "        \n",
+        "        return x\n",
+        "\n",
+        "# Create an instance of the nn.module class defined above:\n",
+        "net = BaseNet()\n",
+        "\n",
+        "# For training on GPU, we need to transfer net and data onto the GPU\n",
+        "# http://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html#training-on-gpu\n",
+        "if IS_GPU:\n",
+        "    net = net.cuda()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SKPsXDIPmHKO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "########################################################################\n",
+        "# 3. Define a Loss function and optimizer\n",
+        "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+        "# Here we use Cross-Entropy loss and SGD with momentum.\n",
+        "# The CrossEntropyLoss criterion already includes softmax within its\n",
+        "# implementation. That's why we don't use a softmax in our model\n",
+        "# definition.\n",
+        "\n",
+        "import torch.optim as optim\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# Tune the learning rate.\n",
+        "# See whether the momentum is useful or not\n",
+        "optimizer = optim.SGD(net.parameters(), lr=0.005, momentum=0.9)\n",
+        "\n",
+        "plt.ioff()\n",
+        "fig = plt.figure()\n",
+        "train_loss_over_epochs = []\n",
+        "val_accuracy_over_epochs = []"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f8tBp_mKmLbi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ku7eF366dyUP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "########################################################################\n",
+        "# 4. Train the network\n",
+        "# ^^^^^^^^^^^^^^^^^^^^\n",
+        "#\n",
+        "# We simply have to loop over our data iterator, and feed the inputs to the\n",
+        "# network and optimize. We evaluate the validation accuracy at each\n",
+        "# epoch and plot these values over the number of epochs\n",
+        "# Nothing to change here\n",
+        "# -----------------------------\n",
+        "for epoch in range(EPOCHS):  # loop over the dataset multiple times\n",
+        "\n",
+        "    running_loss = 0.0\n",
+        "    for i, data in enumerate(trainloader, 0):\n",
+        "        # get the inputs\n",
+        "        inputs, labels = data\n",
+        "\n",
+        "        if IS_GPU:\n",
+        "            inputs = inputs.cuda()\n",
+        "            labels = labels.cuda()\n",
+        "\n",
+        "        # wrap them in Variable\n",
+        "        inputs, labels = Variable(inputs), Variable(labels)\n",
+        "\n",
+        "        # zero the parameter gradients\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        # forward + backward + optimize\n",
+        "        outputs = net(inputs)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        # print statistics\n",
+        "        running_loss += loss.item()\n",
+        "    \n",
+        "    # Normalizing the loss by the total number of train batches\n",
+        "    running_loss/=len(trainloader)\n",
+        "    print('[%d] loss: %.3f' %\n",
+        "          (epoch + 1, running_loss))\n",
+        "\n",
+        "    # Scale of 0.0 to 100.0\n",
+        "    # Calculate validation set accuracy of the existing model\n",
+        "    val_accuracy, val_classwise_accuracy = \\\n",
+        "        calculate_val_accuracy(valloader, IS_GPU)\n",
+        "    print('Accuracy of the network on the val images: %d %%' % (val_accuracy))\n",
+        "\n",
+        "    # # Optionally print classwise accuracies\n",
+        "    # for c_i in range(TOTAL_CLASSES):\n",
+        "    #     print('Accuracy of %5s : %2d %%' % (\n",
+        "    #         classes[c_i], 100 * val_classwise_accuracy[c_i]))\n",
+        "\n",
+        "    train_loss_over_epochs.append(running_loss)\n",
+        "    val_accuracy_over_epochs.append(val_accuracy)\n",
+        "# -----------------------------\n",
+        "\n",
+        "\n",
+        "# Plot train loss over epochs and val set accuracy over epochs\n",
+        "# Nothing to change here\n",
+        "# -------------\n",
+        "plt.subplot(2, 1, 1)\n",
+        "plt.ylabel('Train loss')\n",
+        "plt.plot(np.arange(EPOCHS), train_loss_over_epochs, 'k-')\n",
+        "plt.title('train loss and val accuracy')\n",
+        "plt.xticks(np.arange(EPOCHS, dtype=int))\n",
+        "plt.grid(True)\n",
+        "\n",
+        "plt.subplot(2, 1, 2)\n",
+        "plt.plot(np.arange(EPOCHS), val_accuracy_over_epochs, 'b-')\n",
+        "plt.ylabel('Val accuracy')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.xticks(np.arange(EPOCHS, dtype=int))\n",
+        "plt.grid(True)\n",
+        "plt.savefig(\"plot.png\")\n",
+        "plt.close(fig)\n",
+        "print('Finished Training')\n",
+        "# -------------"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
